--- a/index.html
+++ b/index.html
@@ -1,21 +1,65 @@
 <!DOCTYPE html>
-<html lang="nl">
-	
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2425</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Persona 3 reloaded clone</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<h1>Howdy FED2425</h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#game-system">Game System</a></li>
+                <li><a href="#characters">Characters</a></li>
+                <li><a href="#dlc">DLC</a></li>
+                <li><a href="#expansion-pass">Expansion Pass</a></li>
+                <li><a href="#news">News</a></li>
+                <li class="separator"></li>
+                <li><a href="#language-selector">EN</a></li>
+            </ul>
+        </nav>
+    </header>
 
-	<script defer src="scripts/script.js"></script>
+    <main>
+        <section class="sale">
+            <p>PERSONA3 RELOAD</p>
+            <p>NOW ON SALE</p>
+        </section>    
+
+        <section class="scroll">
+            <p class="scroll-text">scroll</p>
+        </section>
+
+        <section class="trailer">
+            <a href="#trailer">
+                PLAY TRAILER <span>→</span>
+            </a>
+        </section>
+    
+        <section class="buy">
+            <h2>BUY NOW!</h2>
+            <a href="#buy-now">
+                CLICK HERE! <span>→</span>
+            </a>
+        </section>
+
+        <section class="dlc">
+            <h2>DLC</h2>
+            <p>These additional content sets will allow you to change your appearance and BGM as you explore Tartarus,
+            as well as unlock special Personas that you can fuse and use in battle.</p>
+            <a href="#dlc-info">
+                DLC Information <span>→</span>
+            </a>
+        </section>
+        
+    </main>
+
+    <footer>
+
+    </footer>
+
+    <script defer src="scripts/script.js"></script>
 </body>
-	
 </html>
