--- a/index.html
+++ b/index.html
@@ -1,19 +1,272 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 	
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2425</title>
+	<title>MoreAir</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
+	<header>
+		<!--Logo More Air-->
+		<a href=""></a>
+		<nav>
+			<input type="checkbox">
+			<label for="check">
+				<i></i>
+			</label>
+			<ol>
+				<li>
+					<a href="">About</a>
+				</li>
+				<li>
+					<a href="">Work</a>
+				</li>
+				<li>
+					<a href="">Contact</a>
+				</li>
+			</ol>
+		</nav>
+	</header>
+	<main>
+		<section>
+			<h1>Design the future today</h1>
+			<p>We move brands to their next chapter</p>
+			<button>Scroll down</button>
+		</section>
+		<section>
+			<video src=""></video>
+		</section>
+		<section>
+			<article>
+				<img src="" alt="">
+				<h3>Strategy</h3>
+				<p>Our process starts with strategic anchoring, grasping clients’ goals, user needs, and evaluating current products and usage data.</p>
+			</article>
+			<article>
+				<img src="" alt="">
+				<h3>Design</h3>
+				<p>Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
+			</article>
+			<article>
+				<img src="" alt="">
+				<h3>Brand</h3>
+				<p>At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
+			</article>
+			<article>
+				<img src="" alt="">
+				<h3>Technology</h3>
+				<p>Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
+			</article>
+			<article>
+				<h3>Industries</h3>
+				<p>We collaborate with industry leaders in robotics, telecoms, AI, and electric vehicles to achieve impactful results.</p>
+				<ul>
+					<li>Tech</li>
+					<li>Media</li>
+					<li>Telecoms</li>
+					<li>Fintech</li>
+					<li>AI</li>
+					<li>Robotics</li>
+					<li>EV</li>
+					<li>Healthcare</li>
+					<li>Automotive</li>
+					<li>eCommerce</li>
+					<li>Wellness</li>
+				</ul>
+			</article>
+			<article>
+				<ol>
+					<li>
+						<h4>50+</h4>
+						<p>Brand team-ups</p>
+					</li>
+					<li>
+						<h4>14+</h4>
+						<p>Years in business</p>
+					</li>
+					<li>
+						<h4>90+</h4>
+						<p>Industry awards</p>
+					</li>
+				</ol>
+			</article>
+		</section>
+		<section>
+			<h2>Brands</h2>
+			<article>
+				<img src="" alt="Logo of Sky">
+				<img src="" alt="Logo of Axa">
+				<img src="" alt="Logo of Virgin">
+				<img src="" alt="Logo of Ford">
+				<img src="" alt="Logo of Nissan">
+				<img src="" alt="Logo of Volkswagen">
+				<img src="" alt="Logo of Nokia">
+				<img src="" alt="Logo of Apple">
+				<img src="" alt="Logo of Audi">
+				<img src="" alt="Logo of Nike">
+				<img src="" alt="Logo of Fujitsu">
+				<img src="" alt="Logo of BBC">
+			</article>
+			<article>
+				<ul>
+					<li>
+						<p>"More Air's exceptional service in branding and website development significantly enhanced our inline presence, crucial for our successful Series A announcement."</p>
+						<h3>Brad Porter</h3>
+						<h4>Founder & CEO, Cobot</h4>
+					</li>
+					<li>
+						<p>"Thoughtful, intelligent, finely- tuned desig is what you'll receive from More Air. And they're very nice people, so you can't go wrong."</p>
+						<h3>James Hilton</h3>
+						<h4>Co-Founder, AKQA</h4>
+					</li>
+					<li>
+						<p>"Super-talented with a natural eye for design. They have a precise style that feels fresh and modern, and care passionately about the quality of their work."</p>
+						<h3>Anthony Davies</h3>
+						<h4>MD Global Design, Sky</h4>
+					</li>
+					<li>
+						<p>"More Air is a very professional multi-talented creative studio and I had great working experiences with them."</p>
+						<h3>Jun Inoue</h3>
+						<h4>CEO, Great Works K.K. Tokyo</h4>
+					</li>
+					<li>
+						<p>"I've developed a great admiration for their work. Always showing very clever solutions and proposals to enhance the usability and overal experience."</p>
+						<h3>Erich Martino</h3>
+						<h4>Design Manager, Microsoft</h4>
+					</li>
+					<li>
+						<p>"I had the absolute pleasure to work with More Air in two startups. Their empathic design sense is spot on and meticulous. It's always a great pleasure to work with them!"</p>
+						<h3>Ivo Weevers</h3>
+						<h4>Founder & CEO, Albert</h4>
+					</li>
+					<li>
+						<p>"Some of the most creative individuals I have worked with, they have a wide range of skills using the latest technologies."</p>
+						<h3>Sheraz Khan</h3>
+						<h4>Senior Manager, Apple</h4>
+					</li>
+					<li>
+						<p>"Highly creative and diligent going beyond the norm to immerse in the wider strategic context to inform design decisions."</p>
+						<h3>Ant Green</h3>
+						<h4>Studio Director, IBM</h4>
+					</li>
+					<li>
+						<p>"More Air created a new identity for Waseda Tokyo and launched a website that redefines business school excellence in design and features."</p>
+						<h3>Sean Hackett</h3>
+						<h4>Professor, Waseda Tokyo</h4>
+					</li>
+				</ul>
+			</article>
+			<article>
+				<h3>Awards</h3>
+				<p>We’re grateful that our work has been recognised through many international design awards over the years.</p>
+				<img src="" alt="Logo of good design award">
+				<img src="" alt="Logo of reddot winner">
+				<img src="" alt="Logo of international design excellence awards">
+				<img src="" alt="Logo of design award">
+			</article>
+		</section>
+		<section>
+			<h2>Recent work</h2>
+			<ol>
+				<li>
+					<img src="" alt="Picture of and Ipad that displays the Cobot website.">
+					<h3>Cobot Brand System</h3>
+					<p>A new kind of robotics</p>
+				</li>
+				<!--Still needs an Icon because the project is closed-->
+				<li>
+					<img src="" alt="Blue circle with the Nokia logo.">
+					<h3>Nokia Pure Design System</h3>
+					<p>Flexible future-proof design</p>
+				</li>
+				<li>
+					<img src="" alt="Picture of an Phone displaying the Nokia Smart Lightning app.">
+					<h3>Nokia Smart Lightning</h3>
+					<p>Smart home minimalism</p>
+				</li>
+				<!--Still needs an Icon because the project is closed-->
+				<li>
+					<img src="" alt="Picture of a car inside of a dark grey, abstract surrounding.">
+					<h3>Smart Car Experience</h3>
+					<p>The future of transportation</p>
+				</li>
+			</ol>
+			<!--Icoontje met pijltje nog erin-->
+			<button>View all work</button>
+		</section>
+		<section>
+			<h2>How we work</h2>
+			<p>Our lean team, supported by specialised talent tailored to each project, operates with speed and flexibility.</p>
+			<ol>
+				<li>
+					<img src="" alt="A gif that shows multiple people working in the same digital workspace.">
+					<h3>We scale</h3>
+					<p>We gather requirements to establish the team structure, and collaborate with the client's design team or work independently.</p>
+				</li>
+				<li>
+					<img src="" alt="A gif that shows a compass.">
+					<h3>We explore</h3>
+					<p>We study the product, research data, market trends and user behaviour before exploring options with the client to set goals.</p>
+				</li>
+				<li>
+					<img src="" alt="A gif that shows a journey of multiple steps in a process of a project.">
+					<h3>We execute</h3>
+					<p>We develop a roadmap, define milestones, design, prototype and test before build, with our clients involved at every stage.</p>
+				</li>
+				<li>
+					<img src="" alt="A gif that shows different geometric objects being combined into one.">
+					<h3>We iterate</h3>
+					<p>We adjust the product based on feedback and usage data to enhance functionality, ensuring continuous improvements.</p>
+				</li>
+			</ol>
+		</section>
+		<section>
+			<h2></h2>
+			<ol>
+				<li>
+					<img src="" alt="A picture of Tom Vining">
+					<h3>Tom Vining</h3>
+					<h4>Co-Founder</h4>
+					<p>With 2 decades in design, Tom has led, mentored, and designed for top global brands, creating timeless products with his refined design style.</p>
+					<a href="#">LinkedIn</a>
+				</li>
+				<li>
+					<img src="" alt="A picture of Rieko Maeda">
+					<h3>Rieko Maeda</h3>
+					<h4>Co-Founder</h4>
+					<p>Blending business savvy with creative flair, Rieko elevates all of our design initiatives with industry insights, artistic talent and fresh ideas.</p>
+					<a href="#">LinkedIn</a>
+				</li>
+				<li>
+					<img src="" alt="A picture of a circle with white dots around it.">
+					<h3>Specialists</h3>
+					<h4>Talent Network</h4>
+					<p>We have a strong network of talent across disciplines at More Air, tailored to meet specific project needs and ensure our clients get the best results.</p>
+					<a href="#">Join Us</a>
+				</li>
+			</ol>
+		</section>
+		<section>
+			<h2>Let;s work together</h2>
+			<!--Icoontje met pijltje nog erin-->
+			<button>Say hello</button>
+		</section>
+	</main>
+	<footer>
+		<button></button>
+		<p>© More Air 2024</p>
+		<!--Sociale media-->
+		<a href="#"></a>
+		<a href="#"></a>
+		<a href="#"></a>
+	</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
