HTML workpage + little addaptions to index.html

--- a/index.html
+++ b/index.html
@@ -23,44 +23,42 @@
 			</label>
 			<ol>
 				<li>
-					<a href="">About</a>
+					<a href="index.html">About</a>
 				</li>
 				<li>
-					<a href="">Work</a>
+					<a href="work.html">Work</a>
 				</li>
 				<li>
-					<a href="">Contact</a>
+					<a href="#">Contact</a>
 				</li>
 			</ol>
 		</nav>
 	</header>
 	<main>
-		<section>
-			<h1>Design the future today</h1>
-			<p>We move brands to their next chapter</p>
-			<button>Scroll down</button>
-		</section>
+		<h1>Design the future today</h1>
+		<p>We move brands to their next chapter</p>
+		<button>Scroll down</button>
 		<section>
 			<video src=""></video>
 		</section>
 		<section>
 			<article>
-				<img src="" alt="">
+				<img src="" alt="A gif that displays the process of a project.">
 				<h3>Strategy</h3>
 				<p>Our process starts with strategic anchoring, grasping clients’ goals, user needs, and evaluating current products and usage data.</p>
 			</article>
 			<article>
-				<img src="" alt="">
+				<img src="" alt="A gif that displays different software on different devices.">
 				<h3>Design</h3>
 				<p>Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
 			</article>
 			<article>
-				<img src="" alt="">
+				<img src="" alt="A gif about fonts, colors and icons.">
 				<h3>Brand</h3>
 				<p>At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
 			</article>
 			<article>
-				<img src="" alt="">
+				<img src="" alt="A gid that shows different prompts for AI.">
 				<h3>Technology</h3>
 				<p>Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
 			</article>
@@ -253,13 +251,13 @@
 				</li>
 			</ol>
 		</section>
+	</main>
+	<footer>
 		<section>
-			<h2>Let;s work together</h2>
+			<h2>Let's work together</h2>
 			<!--Icoontje met pijltje nog erin-->
 			<button>Say hello</button>
 		</section>
-	</main>
-	<footer>
 		<button></button>
 		<p>© More Air 2024</p>
 		<!--Sociale media-->
