Alt text + video

--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
 		<p>We move brands to their next chapter</p>
 		<button>Scroll down</button>
 		<section>
-			<video src=""></video>
+			<video title="A quick rundown of all sorts of applications that we made." src="https://cdn.sanity.io/files/e5uu7aeh/production/0ed4e65a467077f9e0f075c30c03fb2ac22c7037.mp4" poster=""></video>
 		</section>
 		<section>
 			<article>
-				<img src="" alt="A gif that displays the process of a project.">
+				<video title="The process of a project." src="" poster=""></video>
 				<h3>Strategy</h3>
 				<p>Our process starts with strategic anchoring, grasping clients’ goals, user needs, and evaluating current products and usage data.</p>
 			</article>
 			<article>
-				<img src="" alt="A gif that displays different software on different devices.">
+				<video title="Different software on different devices." src="" poster=""></video>
 				<h3>Design</h3>
 				<p>Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
 			</article>
 			<article>
-				<img src="" alt="A gif about fonts, colors and icons.">
+				<video title="Fonts, colors and icons." src="" poster=""></video>
 				<h3>Brand</h3>
 				<p>At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
 			</article>
 			<article>
-				<img src="" alt="A gid that shows different prompts for AI.">
+				<video title="Different prompts for AI." src="" poster=""></video>
 				<h3>Technology</h3>
 				<p>Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
 			</article>
@@ -174,7 +174,7 @@
 			<h2>Recent work</h2>
 			<ol>
 				<li>
-					<img src="" alt="Picture of and Ipad that displays the Cobot website.">
+					<img src="" alt="Ipad that displays the Cobot website.">
 					<h3>Cobot Brand System</h3>
 					<p>A new kind of robotics</p>
 				</li>
@@ -185,13 +185,13 @@
 					<p>Flexible future-proof design</p>
 				</li>
 				<li>
-					<img src="" alt="Picture of an Phone displaying the Nokia Smart Lightning app.">
+					<img src="" alt="Phone displaying the Nokia Smart Lightning app.">
 					<h3>Nokia Smart Lightning</h3>
 					<p>Smart home minimalism</p>
 				</li>
 				<!--Still needs an Icon because the project is closed-->
 				<li>
-					<img src="" alt="Picture of a car inside of a dark grey, abstract surrounding.">
+					<img src="" alt="Car inside of a dark grey, abstract surrounding.">
 					<h3>Smart Car Experience</h3>
 					<p>The future of transportation</p>
 				</li>
@@ -204,22 +204,22 @@
 			<p>Our lean team, supported by specialised talent tailored to each project, operates with speed and flexibility.</p>
 			<ol>
 				<li>
-					<img src="" alt="A gif that shows multiple people working in the same digital workspace.">
+					<video title="Multiple people working in the same digital workspace." src="" poster=""></video>
 					<h3>We scale</h3>
 					<p>We gather requirements to establish the team structure, and collaborate with the client's design team or work independently.</p>
 				</li>
 				<li>
-					<img src="" alt="A gif that shows a compass.">
+					<video title="A compass." src="" poster=""></video>
 					<h3>We explore</h3>
 					<p>We study the product, research data, market trends and user behaviour before exploring options with the client to set goals.</p>
 				</li>
 				<li>
-					<img src="" alt="A gif that shows a journey of multiple steps in a process of a project.">
+					<video title="Journey of multiple steps in a process of a project." src="" poster=""></video>
 					<h3>We execute</h3>
 					<p>We develop a roadmap, define milestones, design, prototype and test before build, with our clients involved at every stage.</p>
 				</li>
 				<li>
-					<img src="" alt="A gif that shows different geometric objects being combined into one.">
+					<video title="Different geometric objects being combined into one." src="" poster=""></video>
 					<h3>We iterate</h3>
 					<p>We adjust the product based on feedback and usage data to enhance functionality, ensuring continuous improvements.</p>
 				</li>
@@ -243,7 +243,7 @@
 					<a href="#">LinkedIn</a>
 				</li>
 				<li>
-					<img src="" alt="A picture of a circle with white dots around it.">
+					<img src="" alt="Circle with white dots around it.">
 					<h3>Specialists</h3>
 					<h4>Talent Network</h4>
 					<p>We have a strong network of talent across disciplines at More Air, tailored to meet specific project needs and ensure our clients get the best results.</p>
