--- a/work.html
+++ b/work.html
@@ -37,56 +37,56 @@
         <h1>Cobot Brand System</h1>
         <p>Defining Cobot's journey to a unidied brand identity.</p>
         <button></button>
-        <img src="" alt="Picture of and Ipad that displays the Cobot website.">
+        <img src="" alt="Ipad that displays the Cobot website.">
         <section>
             <h2>Cobot, defining the future of robot interaction</h2>
             <p>Cobot was founded in 2022 by former Amazon VP of Robotics Brad Porter, with a team of robotics and AI experts from Amazon, Apple, Meta, Google, Microsoft, NASA, and more. Prior to raising a $30M Series A, we were tasked with designing their brand system, visual identity, and launch website. They’ve since gone on to raise a further $100M Series B, and are well on their way to unicorn status.</p>
-            <img src="" alt="A picture of the logo, status bar, primairy colors and icons.">
-            <img src="" alt="A picture of the symbol, typography, imagery and motion.">
-            <video src=""></video>
+            <img src="" alt="The logo, status bar, primairy colors and icons.">
+            <img src="" alt="The symbol, typography, imagery and motion.">
+            <video title="Abstract lines crossing in circles." src="" poster=""></video>
         </section>
         <section>
             <h2>A system that embodies Cobot's core values</h2>
             <p>Cobot needed a brand system that embodies their core tenets: Trustworthy, Adaptable, and Useful. Our objective was to create a cohesive visual identity that aligns with these principles and their core values which are Listen, Trust, Contribute, Empower, and Reflect. We developed a modern logo that symbolises the synergy and trust between humans and robots, alongside vibrant, dynamic colours balanced with neutral tones, that convey adaptability and trustworthiness.</p>
-            <img src="" alt="Black and White namelogo of Cobot.">
+            <video title="Black and White namelogo of Cobot." src="" poster=""></video>
             <img src="" alt="Color namelogo of Cobot.">
             <img src="" alt="Different variations of the namelogo of Cobot.">
-            <img src="" alt="A black and white animated smile (the logo).">
-            <img src="" alt="A coloured, animated smile (the logo).">
+            <video title="A black and white animated smile (the logo)." src="" poster=""></video>
+            <video title="A coloured, animated smile (the logo)." src="" poster=""></video>
         </section>
         <section>
             <h2>The interaction between human and robot</h2>
             <p>We wanted to strike a balance between a professional and friendly style, to reflect both the human-robot collaboration and the professional environments in which the cobots operate, such as healthcare, warehouses, and offices. Within the brand system we included high-quality images showcasing real-world applications, emphasising utility and interaction, and introduced clean, sans-serif fonts for readability and a contemporary feel. We explored using expressions based on the Cobot logo to create a friendly and more approachable feel.</p>
-            <img src="" alt="Picture of a colorwheel.">
-            <img src="" alt="Picture of a color palette.">
-            <img src="" alt="Picture of the app icon.">
-            <img src="" alt="Picture of the app icon with a background with nature.">
-            <img src="" alt="A gif that displays the brand guidelines and choices made along the way regarding branding.">
+            <img src="" alt="Colorwheel.">
+            <img src="" alt="Color palette.">
+            <video title="The app icon." src="" poster=""></video>
+            <img src="" alt="The app icon with a background with nature.">
+            <video title="The brand guidelines and choices made along the way regarding branding." src="" poster=""></video>
         </section>
         <section>
             <h2>Developing a memorable brand presence</h2>
             <p>With a combination of precise and minimal design, we wanted to capture the essence of advanced technology and forward-thinking, while implementing a unified visual language that will work flexibly across all platforms. We conducted a comprehensive analysis of the robotics industry and market trends, and closely collaborated with Cobot with multiple rounds of refinement to incorporate feedback and ensure alignment with their core values.</p>
-            <img src="" alt="Picture of icons.">
-            <img src="" alt="Picture of icons.">
-            <img src="" alt="Picture of black and white, animated icons.">
-            <img src="" alt="Picture of guidelines regarding the icons.">
-            <img src="" alt="Picture of how icons look on the website.">
-            <img src="" alt="Picture of how the button will be used in the website.">
+            <img src="" alt="Icons.">
+            <img src="" alt="Icons.">
+            <video title="Black and white, animated icons." src="" poster=""></video>
+            <img src="" alt="Guidelines regarding the icons.">
+            <img src="" alt="Look of icons on the website.">
+            <img src="" alt="Look of how the button will be used in the website.">
         </section>
         <section>
             <h2>Successful launch yields positive outcomes</h2>
             <p>The new brand system was rolled out across Cobots' marketing materials, and product packaging while the website we built went live in time for their Series A funding announcement that had to accurately coincide with media coverage. We helped to increase brand recognition and enhance visibility within the industry, while helping to create a modern, professional image reinforcing their leadership in robotics innovation. Stakeholders and audiences responded positively, noting the alignment with the company’s vision and core values.</p>
-            <img src="" alt="A gif about the interaction on a phone.">
-            <img src="" alt="A picture of the website in dark mode.">
-            <img src="" alt="A picture of the website in light mode.">
+            <video title="Interaction on a phone." src="" poster=""></video>
+            <img src="" alt="Website in dark mode.">
+            <img src="" alt="Website in light mode.">
         </section>
         <section>
             <p>“More Air's exceptional service in branding and website development significantly enhanced our online presence, crucial for our successful Series A announcement.”</p>
             <h3>Brad Porter</h3>
             <h4>Founder & CEO, Cobot</h4>
-            <img src="" alt="Picture of the website on a billboard.">
-            <img src="" alt="Picture of advertisements on Instagram.">
-            <img src="" alt="Picture of the logo on a t-shirt.">
+            <img src="" alt="Website on a billboard.">
+            <img src="" alt="Advertisements on Instagram.">
+            <img src="" alt="Logo on a t-shirt.">
         </section>
         <section>
             <h2>More work</h2>
@@ -97,7 +97,7 @@
 					<p>Flexible future-proof design</p>
 				</li>
 				<li>
-					<img src="" alt="Picture of an Phone displaying the Nokia Smart Lightning app.">
+					<img src="" alt="Phone displaying the Nokia Smart Lightning app.">
 					<h3>Nokia Smart Lightning</h3>
 					<p>Smart home minimalism</p>
 				</li>
