pictures and video's in homepage

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<title>MoreAir</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/png" href="https://cdn.sanity.io/images/e5uu7aeh/production/55063ddd5a26a0fa67940a47f1f618d110683449-192x192.png?auto=format">
 </head>
 
 <body>
 	<header>
 		<!--Logo More Air-->
-		<a href=""></a>
+		<a href="index.html"><img src="images/logoBlack.svg" alt="Logo More Air."></a>
 		<nav>
 			<input type="checkbox">
 			<label for="check">
@@ -39,26 +39,26 @@
 		<p>We move brands to their next chapter</p>
 		<button>Scroll down</button>
 		<section>
-			<video title="A quick rundown of all sorts of applications that we made." src="https://cdn.sanity.io/files/e5uu7aeh/production/0ed4e65a467077f9e0f075c30c03fb2ac22c7037.mp4" poster=""></video>
+			<video title="A quick rundown of all sorts of applications that we made." src="https://cdn.sanity.io/files/e5uu7aeh/production/0ed4e65a467077f9e0f075c30c03fb2ac22c7037.mp4" poster="images/posterVideoHome.jpg"></video>
 		</section>
 		<section>
 			<article>
-				<video title="The process of a project." src="" poster=""></video>
+				<video title="The process of a project." src="https://cdn.sanity.io/files/e5uu7aeh/production/6399776641c4ed3bb354c3208204ede03344877a.mp4" poster="images/posterStrategy.jpg"></video>
 				<h3>Strategy</h3>
 				<p>Our process starts with strategic anchoring, grasping clients’ goals, user needs, and evaluating current products and usage data.</p>
 			</article>
 			<article>
-				<video title="Different software on different devices." src="" poster=""></video>
+				<video title="Different software on different devices." src="https://cdn.sanity.io/files/e5uu7aeh/production/afb71045f7dba1b163ae592ad92975cdb2ecabca.mp4" poster="images/posterDesign.jpg"></video>
 				<h3>Design</h3>
 				<p>Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
 			</article>
 			<article>
-				<video title="Fonts, colors and icons." src="" poster=""></video>
+				<video title="Fonts, colors and icons." src="https://cdn.sanity.io/files/e5uu7aeh/production/f66cad2520d3bae54023e1f82318ad0c8d5cd271.mp4" poster="images/posterBrand.jpg"></video>
 				<h3>Brand</h3>
 				<p>At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
 			</article>
 			<article>
-				<video title="Different prompts for AI." src="" poster=""></video>
+				<video title="Different prompts for AI." src="https://cdn.sanity.io/files/e5uu7aeh/production/cc6e487d1eb0c4370907114060b4c6c4b94ccb80.mp4" poster="images/posterTechnology.jpg"></video>
 				<h3>Technology</h3>
 				<p>Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
 			</article>
@@ -99,18 +99,18 @@
 		<section>
 			<h2>Brands</h2>
 			<article>
-				<img src="" alt="Logo of Sky">
-				<img src="" alt="Logo of Axa">
-				<img src="" alt="Logo of Virgin">
-				<img src="" alt="Logo of Ford">
-				<img src="" alt="Logo of Nissan">
-				<img src="" alt="Logo of Volkswagen">
-				<img src="" alt="Logo of Nokia">
-				<img src="" alt="Logo of Apple">
-				<img src="" alt="Logo of Audi">
-				<img src="" alt="Logo of Nike">
-				<img src="" alt="Logo of Fujitsu">
-				<img src="" alt="Logo of BBC">
+				<img src="images/sky.svg" alt="Logo of Sky">
+				<img src="images/axa.svg" alt="Logo of Axa">
+				<img src="images/virgin.svg" alt="Logo of Virgin">
+				<img src="images/ford.svg" alt="Logo of Ford">
+				<img src="images/nissan.svg" alt="Logo of Nissan">
+				<img src="images/volkswagen.svg" alt="Logo of Volkswagen">
+				<img src="images/nokia.svg" alt="Logo of Nokia">
+				<img src="images/apple.svg" alt="Logo of Apple">
+				<img src="images/audi.svg" alt="Logo of Audi">
+				<img src="images/nike.svg" alt="Logo of Nike">
+				<img src="images/fujitsu.svg" alt="Logo of Fujitsu">
+				<img src="images/bbc.svg" alt="Logo of BBC">
 			</article>
 			<article>
 				<ul>
@@ -163,35 +163,35 @@
 			</article>
 			<article>
 				<h3>Awards</h3>
-				<p>We’re grateful that our work has been recognised through many international design awards over the years.</p>
-				<img src="" alt="Logo of good design award">
-				<img src="" alt="Logo of reddot winner">
-				<img src="" alt="Logo of international design excellence awards">
-				<img src="" alt="Logo of design award">
+				<p>We're grateful that our work has been recognised through many international design awards over the years.</p>
+				<img src="images/goodDesignAward.png" alt="Logo of good design award">
+				<img src="images/reddotWinner.png" alt="Logo of reddot winner">
+				<img src="images/internationalDesignExcellenceAwards.png" alt="Logo of international design excellence awards">
+				<img src="images/designAward.png" alt="Logo of design award">
 			</article>
 		</section>
 		<section>
 			<h2>Recent work</h2>
 			<ol>
 				<li>
-					<img src="" alt="Ipad that displays the Cobot website.">
+					<img src="images/cobotBrandSystem.jpg" alt="Ipad that displays the Cobot website.">
 					<h3>Cobot Brand System</h3>
 					<p>A new kind of robotics</p>
 				</li>
 				<!--Still needs an Icon because the project is closed-->
 				<li>
-					<img src="" alt="Blue circle with the Nokia logo.">
+					<img src="images/nokiaPureDesignSystem.jpg" alt="Blue circle with the Nokia logo.">
 					<h3>Nokia Pure Design System</h3>
 					<p>Flexible future-proof design</p>
 				</li>
 				<li>
-					<img src="" alt="Phone displaying the Nokia Smart Lightning app.">
+					<img src="images/nokiaSmartLightning.jpg" alt="Phone displaying the Nokia Smart Lightning app.">
 					<h3>Nokia Smart Lightning</h3>
 					<p>Smart home minimalism</p>
 				</li>
 				<!--Still needs an Icon because the project is closed-->
 				<li>
-					<img src="" alt="Car inside of a dark grey, abstract surrounding.">
+					<img src="images/smartCarExperience.jpg" alt="Car inside of a dark grey, abstract surrounding.">
 					<h3>Smart Car Experience</h3>
 					<p>The future of transportation</p>
 				</li>
@@ -204,22 +204,22 @@
 			<p>Our lean team, supported by specialised talent tailored to each project, operates with speed and flexibility.</p>
 			<ol>
 				<li>
-					<video title="Multiple people working in the same digital workspace." src="" poster=""></video>
+					<video title="Multiple people working in the same digital workspace." src="https://cdn.sanity.io/files/e5uu7aeh/production/d6ac994e2afc01145421ba26e5a280ed2ca0e0c2.mp4" poster="images/weScale.jpg"></video>
 					<h3>We scale</h3>
 					<p>We gather requirements to establish the team structure, and collaborate with the client's design team or work independently.</p>
 				</li>
 				<li>
-					<video title="A compass." src="" poster=""></video>
+					<video title="A compass." src="https://cdn.sanity.io/files/e5uu7aeh/production/5cdd51ad216ffa25d6ab4ebe4c408488d80fc729.mp4" poster="images/weExplore.jpg"></video>
 					<h3>We explore</h3>
 					<p>We study the product, research data, market trends and user behaviour before exploring options with the client to set goals.</p>
 				</li>
 				<li>
-					<video title="Journey of multiple steps in a process of a project." src="" poster=""></video>
+					<video title="Journey of multiple steps in a process of a project." src="https://cdn.sanity.io/files/e5uu7aeh/production/9a32671c2680c38a9e28ba2ad3302c23c8ae131a.mp4" poster="images/weExecute.jpg"></video>
 					<h3>We execute</h3>
 					<p>We develop a roadmap, define milestones, design, prototype and test before build, with our clients involved at every stage.</p>
 				</li>
 				<li>
-					<video title="Different geometric objects being combined into one." src="" poster=""></video>
+					<video title="Different geometric objects being combined into one." src="https://cdn.sanity.io/files/e5uu7aeh/production/147b95fbc1ceb8e0b299128c9c6134d6ab1face0.mp4" poster="images/weIterate.jpg"></video>
 					<h3>We iterate</h3>
 					<p>We adjust the product based on feedback and usage data to enhance functionality, ensuring continuous improvements.</p>
 				</li>
@@ -229,21 +229,21 @@
 			<h2></h2>
 			<ol>
 				<li>
-					<img src="" alt="A picture of Tom Vining">
+					<img src="images/tomVining.jpg" alt="A picture of Tom Vining">
 					<h3>Tom Vining</h3>
 					<h4>Co-Founder</h4>
 					<p>With 2 decades in design, Tom has led, mentored, and designed for top global brands, creating timeless products with his refined design style.</p>
 					<a href="#">LinkedIn</a>
 				</li>
 				<li>
-					<img src="" alt="A picture of Rieko Maeda">
+					<img src="images/riekoMaeda.jpg" alt="A picture of Rieko Maeda">
 					<h3>Rieko Maeda</h3>
 					<h4>Co-Founder</h4>
 					<p>Blending business savvy with creative flair, Rieko elevates all of our design initiatives with industry insights, artistic talent and fresh ideas.</p>
 					<a href="#">LinkedIn</a>
 				</li>
 				<li>
-					<img src="" alt="Circle with white dots around it.">
+					<img src="images/specialists.gif" alt="Circle with white dots around it.">
 					<h3>Specialists</h3>
 					<h4>Talent Network</h4>
 					<p>We have a strong network of talent across disciplines at More Air, tailored to meet specific project needs and ensure our clients get the best results.</p>
@@ -261,9 +261,10 @@
 		<button></button>
 		<p>© More Air 2024</p>
 		<!--Sociale media-->
-		<a href="#"></a>
-		<a href="#"></a>
-		<a href="#"></a>
+		<a href="#"><img src="images/instagram.svg" alt="Instagram"></a>
+		<a href="#"><img src="images/x.svg" alt="X"></a>
+		<a href="#"><img src="images/linkedIn.svg" alt="LinkedIn"></a>
+		<svg x="0px" y="0px" viewBox="0 0 24 24"><path style="fill:#151614;" d="M21.33,0H2.67C1.19,0,0,1.19,0,2.67v18.67C0,22.81,1.19,24,2.67,24h18.67c1.47,0,2.67-1.19,2.67-2.67 V2.67C24,1.19,22.81,0,21.33,0z M7.26,20.67H3.68V9.11h3.58V20.67z M5.45,7.6c-1.17,0-2.12-0.95-2.12-2.13s0.95-2.13,2.12-2.13 c1.17,0,2.12,0.95,2.12,2.13S6.62,7.6,5.45,7.6z M20.67,20.67h-3.56V14.6c0-1.66-0.63-2.59-1.95-2.59c-1.43,0-2.18,0.97-2.18,2.59 v6.07H9.54V9.11h3.43v1.56c0,0,1.03-1.91,3.48-1.91c2.45,0,4.21,1.5,4.21,4.59V20.67z"></path></svg>
 	</footer>
 
 	<script defer src="scripts/script.js"></script>
