--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
 		<p>We move brands to their next chapter</p>
 		<button>Scroll down</button>
 		<section>
-			<video title="A quick rundown of all sorts of applications that we made." src="https://cdn.sanity.io/files/e5uu7aeh/production/0ed4e65a467077f9e0f075c30c03fb2ac22c7037.mp4" poster="images/posterVideoHome.jpg"></video>
+			<video title="A quick rundown of all sorts of applications that we made." src="videos/homepageStart.mp4" poster="images/posterVideoHome.jpg"></video>
 		</section>
 		<section>
 			<article>
-				<video title="The process of a project." src="https://cdn.sanity.io/files/e5uu7aeh/production/6399776641c4ed3bb354c3208204ede03344877a.mp4" poster="images/posterStrategy.jpg"></video>
+				<video title="The process of a project." src="videos/homepageStrategy.mp4" poster="images/posterStrategy.jpg"></video>
 				<h3>Strategy</h3>
 				<p>Our process starts with strategic anchoring, grasping clients’ goals, user needs, and evaluating current products and usage data.</p>
 			</article>
 			<article>
-				<video title="Different software on different devices." src="https://cdn.sanity.io/files/e5uu7aeh/production/afb71045f7dba1b163ae592ad92975cdb2ecabca.mp4" poster="images/posterDesign.jpg"></video>
+				<video title="Different software on different devices." src="videos/homepageDesign.mp4" poster="images/posterDesign.jpg"></video>
 				<h3>Design</h3>
 				<p>Through our dedication to design, we focus on scalable systems, testing, prototyping, and building to make visions a reality.</p>
 			</article>
 			<article>
-				<video title="Fonts, colors and icons." src="https://cdn.sanity.io/files/e5uu7aeh/production/f66cad2520d3bae54023e1f82318ad0c8d5cd271.mp4" poster="images/posterBrand.jpg"></video>
+				<video title="Fonts, colors and icons." src="videos/homepageBrand.mp4" poster="images/posterBrand.jpg"></video>
 				<h3>Brand</h3>
 				<p>At our studio, branding is a journey that builds lasting relationships and unleashes the full potential of our clients' products.</p>
 			</article>
 			<article>
-				<video title="Different prompts for AI." src="https://cdn.sanity.io/files/e5uu7aeh/production/cc6e487d1eb0c4370907114060b4c6c4b94ccb80.mp4" poster="images/posterTechnology.jpg"></video>
+				<video title="Different prompts for AI." src="videos/homepageTechnology.mp4" poster="images/posterTechnology.jpg"></video>
 				<h3>Technology</h3>
 				<p>Embracing the latest innovations, we integrate emerging tech and leverage cutting-edge tools to enhance possibilities.</p>
 			</article>
@@ -209,17 +209,17 @@
 					<p>We gather requirements to establish the team structure, and collaborate with the client's design team or work independently.</p>
 				</li>
 				<li>
-					<video title="A compass." src="https://cdn.sanity.io/files/e5uu7aeh/production/5cdd51ad216ffa25d6ab4ebe4c408488d80fc729.mp4" poster="images/weExplore.jpg"></video>
+					<video title="A compass." src="videos/homepageWeExplore.mp4" poster="images/weExplore.jpg"></video>
 					<h3>We explore</h3>
 					<p>We study the product, research data, market trends and user behaviour before exploring options with the client to set goals.</p>
 				</li>
 				<li>
-					<video title="Journey of multiple steps in a process of a project." src="https://cdn.sanity.io/files/e5uu7aeh/production/9a32671c2680c38a9e28ba2ad3302c23c8ae131a.mp4" poster="images/weExecute.jpg"></video>
+					<video title="Journey of multiple steps in a process of a project." src="videos/homepageWeExecute.mp4" poster="images/weExecute.jpg"></video>
 					<h3>We execute</h3>
 					<p>We develop a roadmap, define milestones, design, prototype and test before build, with our clients involved at every stage.</p>
 				</li>
 				<li>
-					<video title="Different geometric objects being combined into one." src="https://cdn.sanity.io/files/e5uu7aeh/production/147b95fbc1ceb8e0b299128c9c6134d6ab1face0.mp4" poster="images/weIterate.jpg"></video>
+					<video title="Different geometric objects being combined into one." src="videos/homepageWeIterate.mp4" poster="images/weIterate.jpg"></video>
 					<h3>We iterate</h3>
 					<p>We adjust the product based on feedback and usage data to enhance functionality, ensuring continuous improvements.</p>
 				</li>
